--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -73,7 +73,7 @@
 
 
    # ----------------------------------------------------------
-   #       X.DECALICIOUS.com (STATIC ITEMS)
+   #    x.Decalicious.com/x (Static Content | CDN PULL URL)
    # ----------------------------------------------------------
    server {
 
@@ -87,16 +87,8 @@
     more_clear_headers    'Cache-Control';
     more_set_headers      "X-TESTING: DECALS-CF";
 
-
+    #location ~* /(x/|app/|favicon.ico) {
     location / {
-      deny all;
-    }
-
-   # ----------------------------------------------------------
-   #       X.Decalicious.com/x (Static Content | NO CDN)
-   # ----------------------------------------------------------
-    #location /x/ {
-    location ~* /(x/|app/|favicon.ico) {
 
       # HEADERS
       more_set_headers          "Server: DECALS-CF";
@@ -189,7 +181,7 @@
 
 
    # ----------------------------------------------------------
-   #       DECALICIOUS.com (with any subdomain)
+   #       WWW.DECALICIOUS.com (Or Other Subdomains?)
    # ----------------------------------------------------------
    server {
 
