Local Site Decalicicious

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -91,7 +91,7 @@
     location / {
 
       # HEADERS
-      more_set_headers          "Server: DECALS-CF";
+      more_set_headers          "Server: X-DECALS";
       add_header                Cache-Control "no-transform,public,max-age=36720000";
       etag                      on;
       expires                   425d;
