--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -85,11 +85,15 @@
     allow                 all;
     server_tokens         off; 
     more_clear_headers    'Cache-Control';
-    more_set_headers      "X-TESTING: DECALS-CF";
 
-    #location ~* /(x/|app/|favicon.ico) {
+
     location / {
+      more_set_headers      "X-INFO: Forbidden";      
+    }
 
+
+    location ~* /(x/|app/|favicon.ico) {
+    
       # HEADERS
       more_set_headers          "Server: X-DECALS";
       add_header                Cache-Control "no-transform,public,max-age=36720000";
