max age cloudfornt

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -96,7 +96,7 @@
     
       # HEADERS
       more_set_headers          "Server: X-DECALS";
-      add_header                Cache-Control "no-transform,public,max-age=36720000";
+      add_header                Cache-Control "no-transform,public,max-age=36720000, s-maxage=262800";
       etag                      on;
       expires                   425d;
       
