Force GZIP cloudfront

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -73,7 +73,7 @@
 
 
    # ----------------------------------------------------------
-   #    x.Decalicious.com/x (Static Content | CDN PULL URL)
+   #    X.Decalicious.com/x (Static Content | CDN PULL URL)
    # ----------------------------------------------------------
    server {
 
@@ -96,6 +96,7 @@
     
       # HEADERS
       more_set_headers          "Server: X-DECALS";
+      # CACHE BROWSER 425 DAYS (36720000) | CDN EDGE 30 DAYS (262800)
       add_header                Cache-Control "no-transform,public,max-age=36720000, s-maxage=262800";
       etag                      on;
       expires                   425d;
@@ -107,7 +108,7 @@
 
       # Gzip
       gzip                      on;
-      gzip_vary                 on;
+      #gzip_vary                 on;
       gzip_http_version         1.0;
       gzip_disable              "MSIE [1-6].(?!.*SV1)";
       gzip_min_length           200;
@@ -121,14 +122,14 @@
       # PROXY SETTINGS
       proxy_http_version        1.1;
       proxy_redirect            off;
-      proxy_set_header          Host              $http_host;
-      proxy_set_header          X-Real-IP         $remote_addr;
-      proxy_set_header          X-Forwarded-For   $proxy_add_x_forwarded_for;
-      proxy_set_header          X-Forwarded-Proto $scheme;
+      proxy_set_header          Host              "www.decalicious.com";
+     #proxy_set_header          X-Real-IP         $remote_addr;
+     #proxy_set_header          X-Forwarded-For   $proxy_add_x_forwarded_for;
+     #proxy_set_header          X-Forwarded-Proto $scheme;
       proxy_pass                http://iis-servers-decalicious;
       proxy_temp_path           /usr/share/nginx/temp;
-      #proxy_connect_timeout    5;
-      #proxy_read_timeout       240;
+     #proxy_connect_timeout     5;
+     #proxy_read_timeout        240;
 
       # PROXY CACHING
       proxy_cache               STATIC;
