--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -87,6 +87,7 @@
     more_clear_headers    'Cache-Control';
 
 
+    # Show Default Local Page for items outside of X
     location / {
       more_set_headers      "X-INFO: Forbidden";      
     }
@@ -108,14 +109,14 @@
 
       # Gzip
       gzip                      on;
-      #gzip_vary                 on;
+     #gzip_vary                 on;
       gzip_http_version         1.1;
       gzip_disable              "MSIE [1-6].(?!.*SV1)";
       gzip_min_length           1;
       gzip_buffers              64 8k;
       gzip_comp_level           3;
       gzip_proxied              any;
-      #gzip_types                text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+     #gzip_types                text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript;
       gzip_types                text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript font/ttf font/opentype application/vnd.ms-fontobject image/svg+xml;
 
  
@@ -192,7 +193,7 @@
 
     # SERVER SPECIFIC SETTINGS
     listen                80;
-    server_name           *.decalicious.com;
+    server_name           www.decalicious.com frank.decalicious.com;
     root                  /usr/share/nginx/sites/decalicious-down/;
     keepalive_timeout     5s;
     allow                 all;
@@ -211,7 +212,7 @@
     location / {
 
       more_set_headers          "Server: DECALS";
-      add_header                Cache-Control "public, max-age=9";
+      add_header                Cache-Control "public, max-age=60";
       etag                      on;
       expires                   60s;
 
@@ -233,7 +234,7 @@
 
       # PROXY SETTINGS
       proxy_redirect            off;
-      proxy_set_header          Host              $http_host;
+      proxy_set_header          Host              "www.decalicious.com";
       proxy_set_header          X-Real-IP         $remote_addr;
       proxy_set_header          X-Forwarded-For   $proxy_add_x_forwarded_for;
       proxy_set_header          X-Forwarded-Proto $scheme;
