--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -244,7 +244,14 @@
       #proxy_read_timeout       240;
 
       # PROXY CACHING
-      proxy_cache            off;
+      #proxy_cache               off;
+      proxy_cache               STATIC;
+      proxy_cache_valid         200 302 1d;
+      proxy_cache_valid         404     1m;
+      proxy_cache_use_stale     error timeout invalid_header updating
+      http_500 http_502 http_503 http_504;
+
+
 
       #HTTP ERRORS LOCALLY 
       proxy_intercept_errors on; 
