try to cache again

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -228,9 +228,9 @@
       gzip_types                text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript;
       
       # Cache File Information
-      #open_file_cache           max=1000 inactive=500s;
-      #open_file_cache_valid     600s;
-      #open_file_cache_errors    on;
+      open_file_cache           max=1000 inactive=500s;
+      open_file_cache_valid     600s;
+      open_file_cache_errors    on;
 
       # PROXY SETTINGS
       proxy_redirect            off;
