--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -274,9 +274,18 @@
     }
 
 
+    #CORS VARIABLE = TRUE IF DECALICIOUS DOMAIN OR SUB
+    if ($http_origin ~* (.*\.yoursweetdomain.com)) { 
+      set $cors "true"; 
+    }
+
+
     # MAIN SITE LOCATION (NO CACHING)
     location / {
 
+
+
+      # ADDITIONAL HEADERS
       more_set_headers          "Server: DECALS";
       add_header                Cache-Control "public, max-age=60";
       etag                      on;
@@ -323,6 +332,22 @@
       proxy_intercept_errors on; 
       error_page 500 502 503 504 =503 /maintenance.html;
       #error_page 404 =404 /404.html;      
+
+      # SUB LOCATION WITH CORS HEADERS
+      location ~* ^/api(.*){
+        #CORS WITH DECALICIOUS SUBDOMAINS
+        if ($cors = "true") { 
+          add_header 'Access-Control-Allow-Origin' "$http_origin"; 
+          add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, DELETE, PUT'; 
+          add_header 'Access-Control-Allow-Credentials' 'true'; 
+          add_header 'Access-Control-Allow-Headers' 'User-Agent,Keep-Alive,Content-Type'; 
+        } 
+        if ($request_method = OPTIONS) { 
+          return 204; 
+        } 
+      }
+
+
     }
 
 
