--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -334,7 +334,7 @@
       #error_page 404 =404 /404.html;      
 
       # SUB LOCATION WITH CORS HEADERS
-      location ~* ^/api(.*){
+      location ~* ^/app(.*){
         #CORS WITH DECALICIOUS SUBDOMAINS
         if ($cors = "true") { 
           add_header 'Access-Control-Allow-Origin' "$http_origin"; 
