--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -335,6 +335,7 @@
 
       # SUB LOCATION WITH CORS HEADERS
       location /app(.*){
+        more_set_headers          "X-API: TRUE";
         #CORS WITH DECALICIOUS SUBDOMAINS
         if ($cors = "true") { 
           add_header 'Access-Control-Allow-Origin' "$http_origin"; 
