--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -274,10 +274,7 @@
     }
 
 
-    #CORS VARIABLE = TRUE IF DECALICIOUS DOMAIN OR SUB
-    if ($http_origin ~* (.*\.yoursweetdomain.com)) { 
-      set $cors "true"; 
-    }
+
 
 
     # MAIN SITE LOCATION (NO CACHING)
@@ -333,23 +330,70 @@
       error_page 500 502 503 504 =503 /maintenance.html;
       #error_page 404 =404 /404.html;      
 
-      # SUB LOCATION WITH CORS HEADERS
-      location /app(.*){
-        more_set_headers          "X-API: TRUE";
-        #CORS WITH DECALICIOUS SUBDOMAINS
-        if ($cors = "true") { 
+
+
+    #CORS VARIABLE = TRUE IF DECALICIOUS DOMAIN OR SUB
+
+
+    # MAIN SITE LOCATION (NO CACHING)
+    location /api {
+
+      # ADDITIONAL HEADERS
+      more_set_headers          "Server: DECALS-API";
+      add_header                Cache-Control "public, max-age=1";
+      etag                      on;
+      expires                   1s;
+
+      # Gzip
+      gzip                      on;
+      gzip_vary                 on;
+      gzip_http_version         1.0;
+      gzip_disable              "MSIE [1-6].(?!.*SV1)";
+      gzip_min_length           750;
+      gzip_buffers              64 8k;
+      gzip_comp_level           3;
+      gzip_proxied              any;
+      gzip_types                text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+      
+      # Cache File Information
+      #open_file_cache           max=1000 inactive=500s;
+      #open_file_cache_valid     600s;
+      #open_file_cache_errors    on;
+
+      # PROXY SETTINGS
+      proxy_redirect            off;
+      proxy_set_header          Host              "www.decalicious.com";
+      proxy_set_header          X-Real-IP         $remote_addr;
+      proxy_set_header          X-Forwarded-For   $proxy_add_x_forwarded_for;
+      proxy_set_header          X-Forwarded-Proto $scheme;
+      proxy_pass                http://iis-servers-decalicious;
+      proxy_temp_path           /usr/share/nginx/temp;
+      #proxy_connect_timeout    5;
+      #proxy_read_timeout       240;
+
+      # PROXY CACHING
+      proxy_cache               off;
+
+      #HTTP ERRORS LOCALLY 
+      proxy_intercept_errors on; 
+      error_page 500 502 503 504 =503 /maintenance.html;
+      #error_page 404 =404 /404.html;      
+
+
+
+      if ($cors = "true") { 
           add_header 'Access-Control-Allow-Origin' "$http_origin"; 
           add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, DELETE, PUT'; 
           add_header 'Access-Control-Allow-Credentials' 'true'; 
           add_header 'Access-Control-Allow-Headers' 'User-Agent,Keep-Alive,Content-Type'; 
-        } 
-        if ($request_method = OPTIONS) { 
+      } 
+      if ($request_method = OPTIONS) { 
           return 204; 
-        } 
-      }
-
-
+       } 
     }
+
+
+
 
 
    # ----------------------------------------------------------
