--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -379,7 +379,10 @@
       error_page 500 502 503 504 =503 /maintenance.html;
       #error_page 404 =404 /404.html;      
 
-
+      #CORS WITH DECALICIOUS SUBDOMAINS
+    if ($http_origin ~* (.*\.yoursweetdomain.com)) { 
+      set $cors "true"; 
+    }
 
       if ($cors = "true") { 
           add_header 'Access-Control-Allow-Origin' "$http_origin"; 
