--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -340,7 +340,7 @@
 
       # ADDITIONAL HEADERS
       more_set_headers          "Server: DECALS-API";
-      add_header                Cache-Control "public, max-age=1";
+      add_header                Cache-Control "private";
       etag                      on;
       expires                   1s;
 
@@ -380,9 +380,9 @@
       #error_page 404 =404 /404.html;      
 
       #CORS WITH DECALICIOUS SUBDOMAINS
-    if ($http_origin ~* (.*\.yoursweetdomain.com)) { 
-      set $cors "true"; 
-    }
+      if ($http_origin ~* (.*\.decalicious.com)) { 
+        set $cors "true"; 
+      }
 
       if ($cors = "true") { 
           add_header 'Access-Control-Allow-Origin' "$http_origin"; 
