--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -90,6 +90,7 @@
     # Show Default Local Page for items outside of X
     location / {
       more_set_headers      "X-INFO: Forbidden";      
+      break;
     }
 
    # ----------------------------------------------------------
@@ -329,12 +330,10 @@
       proxy_intercept_errors on; 
       error_page 500 502 503 504 =503 /maintenance.html;
       #error_page 404 =404 /404.html;      
-
+      break;
   }
 
-    #CORS VARIABLE = TRUE IF DECALICIOUS DOMAIN OR SUB
-
-
+ 
     # MAIN SITE LOCATION (NO CACHING)
     location /api {
 
@@ -383,7 +382,6 @@
       if ($http_origin ~* (.*\.decalicious.com)) { 
         set $cors "true"; 
       }
-
       if ($cors = "true") { 
           add_header 'Access-Control-Allow-Origin' "$http_origin"; 
           add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, DELETE, PUT'; 
@@ -392,7 +390,9 @@
       } 
       if ($request_method = OPTIONS) { 
           return 204; 
-       } 
+      } 
+
+      break;
     }
 
 
