Try without ssl

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -45,6 +45,34 @@
     }
 
 
+    # -------------------------------------
+    #      SSL REDIRECT MISSING WWW       -
+    #--------------------------------------
+    server {
+
+      ssl on;
+      listen      443 ssl;
+      server_name www.decalicious.com;
+
+      #REDIRECT TO SSL https://www.nutraxen.com
+      rewrite ^ http://www.decalicious.com$request_uri? permanent;
+
+      # BASIC SSL CERTIFICATE (TEMPORARY)
+      # ssl_certificate /usr/share/nginx/ssl-certs/nutraxen_com/nutraxen_basic.crt;
+      # EXTENDED VALIDATION CERTIFICATE (GREEN BAR)
+      #ssl_certificate /usr/share/nginx/ssl-certs/nutraxen_com/nutraxen_ev.crt;
+
+      # SSL KEY
+      #ssl_certificate_key /usr/share/nginx/ssl-certs/nutraxen_com/nutraxen.com.key;
+
+      # NO LOGGING
+      access_log          /dev/null;
+      error_log           /dev/null;
+    }
+
+
+
+
 
 
 
@@ -273,10 +301,6 @@
       access_log   off;
       allow all;
     }
-
-
-
-
 
     # MAIN SITE LOCATION (NO CACHING)
     location / {
