--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -58,12 +58,12 @@
       rewrite ^ http://www.decalicious.com$request_uri? permanent;
 
       # BASIC SSL CERTIFICATE (TEMPORARY)
-      # ssl_certificate /usr/share/nginx/ssl-certs/nutraxen_com/nutraxen_basic.crt;
+       ssl_certificate /usr/share/nginx/ssl-certs/nutraxen_com/nutraxen_basic.crt;
       # EXTENDED VALIDATION CERTIFICATE (GREEN BAR)
-      #ssl_certificate /usr/share/nginx/ssl-certs/nutraxen_com/nutraxen_ev.crt;
+      # ssl_certificate /usr/share/nginx/ssl-certs/nutraxen_com/nutraxen_ev.crt;
 
       # SSL KEY
-      #ssl_certificate_key /usr/share/nginx/ssl-certs/nutraxen_com/nutraxen.com.key;
+       ssl_certificate_key /usr/share/nginx/ssl-certs/nutraxen_com/nutraxen.com.key;
 
       # NO LOGGING
       access_log          /dev/null;
