--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -85,7 +85,7 @@
      ip_hash;
 
      # UPSTREAM IIS SERVERS (Add More As Needed)
-     server ww1.decalicious9999999999999.com;
+     server ww1.decalicious.com;
      #server ww2.decalicious.com;
      #server ww3.decalicious.com;
      #server ww4.decalicious.com;
