--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -434,6 +434,9 @@
         deny all;
       }
 
+      #Remove Trailing Slashes
+      rewrite ^/(.*)/$ /$1 permanent;
+
       # Rewrite outbound text to new url
       subs_filter               blog.decalicious.com/ www.decalicious.com/blog/;
 
