--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -434,8 +434,10 @@
         deny all;
       }
 
-      #Remove Trailing Slashes
-      rewrite ^/(.*)/$ /$1 permanent;
+      location ~* ^/blog/ {
+        #Remove Trailing Slashes
+        rewrite ^/(.*)$ http://www.decalicious.com/blog permanent;
+      }
 
       # Rewrite outbound text to new url
       subs_filter               blog.decalicious.com/ www.decalicious.com/blog/;
@@ -443,7 +445,6 @@
       # Variables so we can redirect later
       set $blog_url            'blog.decalicious.com';
       set $url_full            '$1';
-
 
       # HEADERS
       more_set_headers          "Server: DECALS-BL";
@@ -467,7 +468,6 @@
       gzip_proxied              any;
       gzip_types                text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript;
  
-
       # PROXY SETTINGS
       proxy_set_header          Accept-Encoding "";
       proxy_http_version        1.1;
@@ -482,14 +482,12 @@
       proxy_pass                http://$blog_url/$url_full;
       proxy_temp_path           /usr/share/nginx/temp;
 
-
       # PROXY CACHING
       proxy_cache               STATIC;
       proxy_cache_valid         200 302 1d;
       proxy_cache_valid         404     1m;
       proxy_cache_use_stale     error timeout invalid_header updating
       http_500 http_502 http_503 http_504;
-
 
       #HTTP ERRORS LOCALLY 
       proxy_intercept_errors on; 
