--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -434,7 +434,7 @@
         deny all;
       }
 
-      location ~* ^/blog/ {
+      location = /blog/ {
         #Remove Trailing Slashes
         rewrite ^/(.*)$ http://www.decalicious.com/blog permanent;
       }
