--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -423,6 +423,11 @@
    # ----------------------------------------------------------
    #       www.Decalicious.com/Blog (Reverse Proxy Blogger)
    # ----------------------------------------------------------
+    location = /blog/ {
+      #Remove Trailing Slashes
+      rewrite ^/(.*)$ http://www.decalicious.com/blog permanent;
+    }
+
     location ~* ^/blog(.*) {
 
       # Make sure blog is only available under www domain
@@ -432,11 +437,6 @@
 
       location ~* ^/blog/robots.txt {
         deny all;
-      }
-
-      location = / {
-        #Remove Trailing Slashes
-        rewrite ^/(.*)$ http://www.decalicious.com/blog permanent;
       }
 
       # Rewrite outbound text to new url
