--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -220,7 +220,7 @@
 
     # SERVER SPECIFIC SETTINGS
     listen                80;
-    listen                443 ssl;  
+    listen                443 ssl spdy default_server;  
     server_name           www.decalicious.com frank.decalicious.com;
 
     # SSL CERT & KEY
@@ -558,14 +558,12 @@
       break;
     }
 
-
     # ERROR PAGE - DOWN FOR MAINTENANCE
     location  ^~ /maintenance.html {
       root   /usr/share/nginx/sites/decalicious-down/;
       index  maintenance.html index.html index.htm;
       allow all;
     }
-
 
     # EROR PAGE - LOCAL 404 PAGE
     location  ^~ /404.html {
