--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -227,6 +227,13 @@
     ssl_certificate /usr/share/nginx/ssl-certs/decalicious_com/decalicious_com_bundle.crt;
     ssl_certificate_key /usr/share/nginx/ssl-certs/decalicious_com/decalicious_com.key;
 
+    # SSL SETTINGS
+    ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
+    ssl_prefer_server_ciphers on;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
+    ssl_ciphers         HIGH:!aNULL:!MD5;
+
     # SITE LOCATION
     root                  /usr/share/nginx/sites/decalicious-down/;
     keepalive_timeout     5s;
