blog rewrite https

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -379,7 +379,7 @@
 
       # Make sure blog is only available under www domain
       if ( $host != 'www.decalicious.com' ) {
-        rewrite ^/(.*)$ http://www.decalicious.com/$1 permanent;
+        rewrite ^/(.*)$ https://www.decalicious.com/$1 permanent;
       }
 
       location ~* ^/blog/robots.txt {
@@ -388,6 +388,7 @@
 
       # Rewrite outbound text to new url
       subs_filter               blog.decalicious.com/ www.decalicious.com/blog/;
+      subs_filter               http:// https://
 
       # Variables so we can redirect later
       set $blog_url            'blog.decalicious.com';
