--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -388,7 +388,7 @@
 
       # Rewrite outbound text to new url
       subs_filter               blog.decalicious.com/ www.decalicious.com/blog/;
-      subs_filter               scr='http:// scr='https://;
+      subs_filter               scr=\'http:// scr=\'https://;
 
       # Variables so we can redirect later
       set $blog_url            'blog.decalicious.com';
