--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -379,16 +379,15 @@
 
       # Make sure blog is only available under www domain
       if ( $host != 'www.decalicious.com' ) {
-        rewrite ^/(.*)$ https://www.decalicious.com/$1 permanent;
+        rewrite ^/(.*)$ http://www.decalicious.com/$1 permanent;
       }
 
       location ~* ^/blog/robots.txt {
         deny all;
       }
 
-      # Rewrite outbound text to new url
+      # Rewrite outbound text to new url | rewrite https for image sources
       subs_filter               blog.decalicious.com/ www.decalicious.com/blog/;
-      subs_filter               scr=\'http:// scr=\'https://;
 
       # Variables so we can redirect later
       set $blog_url            'blog.decalicious.com';
