--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -382,6 +382,11 @@
         rewrite ^/(.*)$ http://www.decalicious.com/$1 permanent;
       }
 
+      # Turn off SSL for Blog
+      if ($ssl_protocol != "") {
+       rewrite ^   http://$server_name$request_uri? permanent;
+      }
+
       location ~* ^/blog/robots.txt {
         deny all;
       }
