--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -299,6 +299,20 @@
       error_page 500 502 503 504 =503 /maintenance.html;
       error_page 404 =404 /404.html;      
       break;
+
+      # RULES FOR FORCING SSL
+      set $force_SSL A; #START WITH BAISC VARIABLE (A)
+      
+      if ($ssl_protocol = "") {
+        set $force_SSL "${force_SSL}B"; #SSL NOT ENABLED (AB)
+        #rewrite ^   https://$server_name$request_uri? permanent;
+      }
+
+      if ($ssl_protocol = AB) {
+        rewrite ^ https://$server_name$request_uri? permanent; #REDIRECT TO SSL VERSION
+      }
+
+
   }
 
  
