--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -301,14 +301,14 @@
       break;
 
       # RULES FOR FORCING SSL
-      set $force_SSL A; #START WITH BAISC VARIABLE (A)
-      
+      set $force_SSL ""; 
+
       if ($ssl_protocol = "") {
-        set $force_SSL "${force_SSL}B"; #SSL NOT ENABLED (AB)
-        #rewrite ^   https://$server_name$request_uri? permanent;
+        set $force_SSL     "${force_SSL}T"; 
+        more_set_headers   "x-error-1: NOT USING SSL";
       }
 
-      if ($ssl_protocol = AB) {
+      if ($ssl_protocol = T) {
         rewrite ^ https://$server_name$request_uri? permanent; #REDIRECT TO SSL VERSION
       }
 
