--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -253,6 +253,20 @@
     # MAIN SITE LOCATION (NO CACHING)
     location / {
 
+
+      # RULES FOR FORCING SSL
+      set $force_SSL "T"; 
+
+      if ($ssl_protocol = "") {
+        set $force_SSL     "${force_SSL}E"; 
+        more_set_headers   "x-error-1: NOT USING SSL";
+      }
+
+      if ($ssl_protocol = TE) {
+        rewrite ^ https://$server_name$request_uri? permanent; #REDIRECT TO SSL VERSION
+      }
+
+
       # ADDITIONAL HEADERS
       more_set_headers          "Server: DECALS";
       add_header                Cache-Control "public, max-age=60";
@@ -298,19 +312,6 @@
       proxy_intercept_errors on; 
       error_page 500 502 503 504 =503 /maintenance.html;
       error_page 404 =404 /404.html;      
-
-
-      # RULES FOR FORCING SSL
-      set $force_SSL ""; 
-
-      if ($ssl_protocol = "") {
-        set $force_SSL     "${force_SSL}T"; 
-        more_set_headers   "x-error-1: NOT USING SSL";
-      }
-
-      if ($ssl_protocol = T) {
-        rewrite ^ https://$server_name$request_uri? permanent; #REDIRECT TO SSL VERSION
-      }
 
       break;
 
