--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -255,7 +255,7 @@
 
 
       # RULES FOR FORCING SSL
-      set $force_SSL "T"; 
+      set $force_SSL T; 
 
       if ($ssl_protocol = "") {
         set $force_SSL     "${force_SSL}E"; 
