--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -263,7 +263,7 @@
       }
 
       if ($ssl_protocol = TE) {
-        rewrite ^ https://$server_name$request_uri? permanent; #REDIRECT TO SSL VERSION
+        rewrite ^ https://$server_name$request_uri? permanent; 
       }
 
 
