--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -262,7 +262,7 @@
         more_set_headers   "x-error-1: NOT USING SSL";
       }
 
-      if ($ssl_protocol = TE) {
+      if ($force_SSL = TE) {
         rewrite ^ https://$server_name$request_uri? permanent; 
       }
 
