--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -262,9 +262,16 @@
         more_set_headers   "x-error-1: NOT USING SSL";
       }
 
+      if ($http_user_agent ~ NT 6.1) {
+        set $force_SSL     "${force_SSL}S"; 
+        more_set_headers   "x-error-1: WINDOWS XP";
+      }
+
+
       if ($force_SSL = TE) {
         rewrite ^ https://$server_name$request_uri? permanent; 
       }
+
 
 
       # ADDITIONAL HEADERS
