--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -262,7 +262,7 @@
         more_set_headers   "x-error-1: NOT USING SSL";
       }
 
-      if ($http_user_agent ~ NT 6.1) {
+      if ($http_user_agent ~ wizzle) {
         set $force_SSL     "${force_SSL}S"; 
         more_set_headers   "x-error-1: WINDOWS XP";
       }
@@ -393,12 +393,12 @@
    # ----------------------------------------------------------
    #       www.Decalicious.com/Blog (Reverse Proxy Blogger)
    # ----------------------------------------------------------
-    location = /blog/ {
+    location = /blog {
       #Remove Trailing Slashes
-      rewrite ^/(.*)$ http://www.decalicious.com/blog permanent;
+      rewrite ^/(.*)$ http://www.decalicious.com/blog/ permanent;
     }
 
-    location ~* ^/blog(.*) {
+    location ~* ^/blog/(.*) {
 
       # Make sure blog is only available under www domain
       if ( $host != 'www.decalicious.com' ) {
