--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -257,16 +257,17 @@
       # RULES FOR FORCING SSL
       set $force_SSL T; 
 
+      # DETECT SSL IS OFF
       if ($ssl_protocol = "") {
         set $force_SSL     "${force_SSL}E"; 
         more_set_headers   "x-error-1: NOT USING SSL";
       }
 
-      if ($http_user_agent ~ "NT 6.1") {
+      # DETECT XP
+      if ($http_user_agent != "NT 5.1") {
         set $force_SSL     "${force_SSL}S"; 
-        more_set_headers   "x-error-1: WINDOWS XP";
+        more_set_headers   "X-Error: WINXP";
       }
-
 
       if ($force_SSL = TE) {
         rewrite ^ https://$server_name$request_uri? permanent; 
