--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -253,27 +253,34 @@
     # MAIN SITE LOCATION (NO CACHING)
     location / {
 
+      # START REDIRECT TO HTTPS RULES
+          # DEFAULT HTTPS (EVERYTHING OK - REQUEST CAME IN ON HTTPS)
+          set $force_SSL HTTPS;
 
-      # RULES FOR FORCING SSL
-      set $force_SSL T; 
+          # IF REQUEST NOT SECURE | VAR = T (TRUE) | MAY NEED REDIRECT
+          if ($ssl_protocol = "") {
+            set $force_SSL     HTTP; 
+            more_set_headers   "X-Error-1: Not Using SSL";
+          }
 
-      # DETECT SSL IS OFF
-      if ($ssl_protocol = "") {
-        set $force_SSL     "${force_SSL}E"; 
-        more_set_headers   "x-error-1: NOT USING SSL";
-      }
+          # IF WINDOWS XP VAR = F (FALSE) | BECAUSE WINDOWS XP CANNOT DO SNI
+          if ($http_user_agent ~ "NT 5.1") {
+            set $force_SSL     "${force_SSL}XP"; 
+            more_set_headers   "X-Error-2: Windows XP";
+          }
 
-      # DETECT XP
-      if ($http_user_agent != "NT 5.1") {
-        set $force_SSL     "${force_SSL}S"; 
-        more_set_headers   "X-Error: WINXP";
-      }
+          # VAR = HTTP (NOT SSL | NOT XP) > REDIRECT TO HTTPS PAGE
+          if ($force_SSL = HTTP) {
+            rewrite ^ https://$server_name$request_uri? permanent; 
+            break;
+          }
 
-      if ($force_SSL = TE) {
-        rewrite ^ https://$server_name$request_uri? permanent; 
-      }
-
-
+          # VAR = HTTPS (NOT SSL | NOT XP) > REDIRECT TO HTTPS PAGE
+          if ($force_SSL = HTTPSXP) {
+            rewrite ^ http://$server_name$request_uri? redirect;
+            break;
+          }
+      # END REDIRECT TO HTTPS RULES
 
       # ADDITIONAL HEADERS
       more_set_headers          "Server: DECALS";
@@ -397,6 +404,7 @@
     location = /blog {
       #Remove Trailing Slashes
       rewrite ^/(.*)$ http://www.decalicious.com/blog/ permanent;
+      break;
     }
 
     location ~* ^/blog/(.*) {
@@ -404,11 +412,13 @@
       # Make sure blog is only available under www domain
       if ( $host != 'www.decalicious.com' ) {
         rewrite ^/(.*)$ http://www.decalicious.com/$1 permanent;
+        break;
       }
 
       # Turn off SSL for Blog
       if ($ssl_protocol != "") {
        rewrite ^   http://$server_name$request_uri? permanent;
+       break;
       }
 
       location ~* ^/blog/robots.txt {
