--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -264,7 +264,7 @@
           }
 
           # IF WINDOWS XP VAR = F (FALSE) | BECAUSE WINDOWS XP CANNOT DO SNI
-          if ($http_user_agent ~ "NT 5.1") {
+          if ($http_user_agent = "NT 5.1") {
             set $force_SSL     "${force_SSL}XP"; 
             more_set_headers   "X-Error-2: Windows XP";
           }
