--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -242,6 +242,13 @@
     
     # CLEAR CACHE CONTROL FROM IIS BACKEND
     more_clear_headers    'Cache-Control';
+
+    # BLOCK BAD AGENTS
+    if ($http_user_agent ~* LWP::Simple|BBBike|wget) {
+      return 403;
+    }    
+
+
     
     # IIS FARM DASHBOARD  //www.decalicious.com/iis-servers-decalicoius
     location /dashboard/nginx {
@@ -260,13 +267,13 @@
           # IF REQUEST NOT SECURE | VAR = T (TRUE) | MAY NEED REDIRECT
           if ($ssl_protocol = "") {
             set $force_SSL     HTTP; 
-            more_set_headers   "X-Error-1: Not Using SSL";
+            #more_set_headers   "X-Error-1: Not Using SSL";
           }
 
           # IF WINDOWS XP VAR = F (FALSE) | BECAUSE WINDOWS XP CANNOT DO SNI
           if ($http_user_agent ~* "NT 5.1") {
             set $force_SSL     "${force_SSL}XP"; 
-            more_set_headers   "X-Error-2: Windows XP";
+            more_set_headers   "X-Warning: SSL Off";
           }
 
           # VAR = HTTP (NOT SSL | NOT XP) > REDIRECT TO HTTPS PAGE
