--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -613,6 +613,7 @@
 
     # ERROR PAGE - DOWN FOR MAINTENANCE
     location  ^~ /maintenance.html {
+      internal;
       root   /usr/share/nginx/sites/decalicious-down/;
       index  maintenance.html index.html index.htm;
       allow all;
@@ -620,6 +621,7 @@
 
     # EROR PAGE - LOCAL 404 PAGE
     location  ^~ /404.html {
+      internal;
       root   /usr/share/nginx/sites/decalicious-down/;
       index  404.html index.html index.htm;
       allow all;
