Reload Bash Script

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -629,6 +629,7 @@
 
     # LOCAL ERROR PAGE SCRIPTS AND IMAGES (XS Directory)
     location /xs {
+      internal;
       root   /usr/share/nginx/sites/decalicious-down/;
       allow  all;    	
    }
