--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -178,21 +178,21 @@
 
     # ERROR PAGE - DOWN FOR MAINTENANCE
     location  ^~ /maintenance.html {
-      root   /usr/share/nginx/sites/decalicious-down/;
+      #root   /usr/share/nginx/sites/decalicious-down/;
       index  maintenance.html index.html index.htm;
       allow all;
     }
 
     # EROR PAGE - LOCAL 404 PAGE
     location  ^~ /404.html {
-      root   /usr/share/nginx/sites/decalicious-down/;
+      #root   /usr/share/nginx/sites/decalicious-down/;
       index  404.html index.html index.htm;
       allow all;
     }
 
     # LOCAL ERROR PAGE SCRIPTS AND IMAGES (XS Directory)
     location /xs {
-      root   /usr/share/nginx/sites/decalicious-down/;
+      #root   /usr/share/nginx/sites/decalicious-down/;
       allow  all;     
    }
 
@@ -614,7 +614,7 @@
     # ERROR PAGE - DOWN FOR MAINTENANCE
     location  ^~ /maintenance.html {
       internal;
-      root   /usr/share/nginx/sites/decalicious-down/;
+      #root   /usr/share/nginx/sites/decalicious-down/;
       index  maintenance.html index.html index.htm;
       allow all;
     }
@@ -622,7 +622,7 @@
     # EROR PAGE - LOCAL 404 PAGE
     location  ^~ /404.html {
       internal;
-      root   /usr/share/nginx/sites/decalicious-down/;
+      #root   /usr/share/nginx/sites/decalicious-down/;
       index  404.html index.html index.htm;
       allow all;
     }
@@ -630,7 +630,7 @@
     # LOCAL ERROR PAGE SCRIPTS AND IMAGES (XS Directory)
     location /xs {
       internal;
-      root   /usr/share/nginx/sites/decalicious-down/;
+      #root   /usr/share/nginx/sites/decalicious-down/;
       allow  all;    	
    }
 
