remove old pages

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -235,7 +235,7 @@
     ssl_ciphers         HIGH:!aNULL:!MD5;
 
     # SITE LOCATION
-#    root                  /usr/share/nginx/sites/decalicious-down/;
+    root                  /usr/share/nginx/sites/decalicious-down/;
     keepalive_timeout     5s;
     allow                 all;
     server_tokens         off; 
@@ -259,8 +259,6 @@
 
     # MAIN SITE LOCATION (NO CACHING)
     location / {
-
-      root   /usr/share/nginx/sites/decalicious-down/;
 
       # START REDIRECT TO HTTPS RULES
           # DEFAULT HTTPS (EVERYTHING OK - REQUEST CAME IN ON HTTPS)
@@ -345,8 +343,6 @@
     # MAIN SITE LOCATION (NO CACHING)
     location /api {
 
-      root   /usr/share/nginx/sites/decalicious-down/;
-
       # ADDITIONAL HEADERS
       more_set_headers          "Server: DECALS-API";
       add_header                Cache-Control "private";
@@ -413,16 +409,12 @@
    #       www.Decalicious.com/Blog (Reverse Proxy Blogger)
    # ----------------------------------------------------------
     location = /blog {
-
-      root   /usr/share/nginx/sites/decalicious-down/;
       #Remove Trailing Slashes
       rewrite ^/(.*)$ http://www.decalicious.com/blog/ permanent;
       break;
     }
 
     location ~* ^/blog/(.*) {
-
-      root   /usr/share/nginx/sites/decalicious-down/;
 
       # Make sure blog is only available under www domain
       if ( $host != 'www.decalicious.com' ) {
@@ -503,7 +495,6 @@
    # ----------------------------------------------------------
     location ~* ^/x/s3/(.*) {
 
-      root   /usr/share/nginx/sites/decalicious-down/;
 
       set $s3_bucket           'decalicious.s3.amazonaws.com';
       set $url_full            '$1';
@@ -570,8 +561,6 @@
     #location /x/ {
     location ~* /(x/|app/|favicon.ico) {
 
-      root   /usr/share/nginx/sites/decalicious-down/;
-
       # HEADERS
       more_set_headers          "Server: DECALS-X";
       add_header                Cache-Control "no-transform,public,max-age=36720000";
@@ -625,7 +614,7 @@
     # ERROR PAGE - DOWN FOR MAINTENANCE
     location  ^~ /maintenance.html {
       internal;
-      root   /usr/share/nginx/sites/decalicious-down/;
+      root   /;
       index  maintenance.html index.html index.htm;
       allow all;
     }
@@ -633,7 +622,7 @@
     # EROR PAGE - LOCAL 404 PAGE
     location  ^~ /404.html {
       internal;
-      root   /usr/share/nginx/sites/decalicious-down/;
+      root   /;
       index  404.html index.html index.htm;
       allow all;
     }
