--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -178,21 +178,21 @@
 
     # ERROR PAGE - DOWN FOR MAINTENANCE
     location  ^~ /maintenance.html {
-      #root   /usr/share/nginx/sites/decalicious-down/;
+      root   /usr/share/nginx/sites/decalicious-down/;
       index  maintenance.html index.html index.htm;
       allow all;
     }
 
     # EROR PAGE - LOCAL 404 PAGE
     location  ^~ /404.html {
-      #root   /usr/share/nginx/sites/decalicious-down/;
+      root   /usr/share/nginx/sites/decalicious-down/;
       index  404.html index.html index.htm;
       allow all;
     }
 
     # LOCAL ERROR PAGE SCRIPTS AND IMAGES (XS Directory)
     location /xs {
-      #root   /usr/share/nginx/sites/decalicious-down/;
+      root   /usr/share/nginx/sites/decalicious-down/;
       allow  all;     
    }
 
@@ -382,7 +382,7 @@
       #HTTP ERRORS LOCALLY 
       proxy_intercept_errors on; 
       error_page 500 502 503 504 =503 /maintenance.html;
-      #error_page 404 =404 /404.html;      
+      error_page 404 =404 /404.html;      
 
       #CORS WITH DECALICIOUS SUBDOMAINS
       if ($http_origin ~* (.*\.decalicious.com)) { 
@@ -485,7 +485,7 @@
       #HTTP ERRORS LOCALLY 
       proxy_intercept_errors on; 
       error_page 500 502 503 504 =503 /maintenance.html;
-      #error_page 404 =404 /404.html;      
+      error_page 404 =404 /404.html;      
       break;
     }
 
@@ -614,7 +614,7 @@
     # ERROR PAGE - DOWN FOR MAINTENANCE
     location  ^~ /maintenance.html {
       internal;
-      root   /;
+      root   /usr/share/nginx/sites/decalicious-down/;
       index  maintenance.html index.html index.htm;
       allow all;
     }
@@ -622,7 +622,7 @@
     # EROR PAGE - LOCAL 404 PAGE
     location  ^~ /404.html {
       internal;
-      root   /;
+      root   /usr/share/nginx/sites/decalicious-down/;        
       index  404.html index.html index.htm;
       allow all;
     }
@@ -635,8 +635,8 @@
    }
 
    # ERROR PAGES (LOCAL)
-   error_page 404  /usr/share/nginx/sites/decalicious-down/404.html;
-   error_page 500 502 503 504 =503 /usr/share/nginx/sites/decalicious-down/maintenance.html;
+   error_page 404  404.html;
+   error_page 500 502 503 504 =503 maintenance.html;
 
 
    # NO LOGGING
