--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -248,6 +248,10 @@
       return 403;
     }    
 
+    #HTTP ERRORS LOCALLY 
+    proxy_intercept_errors on; 
+    error_page 500 502 503 504 =503 /maintenance.html;
+    error_page 404 =404 /404.html;    
 
     
     # IIS FARM DASHBOARD  //www.decalicious.com/iis-servers-decalicoius
@@ -329,12 +333,6 @@
       proxy_cache_valid         404     1m;
       proxy_cache_use_stale     error timeout invalid_header updating
       http_500 http_502 http_503 http_504;
-
-      #HTTP ERRORS LOCALLY 
-      proxy_intercept_errors on; 
-      error_page 500 502 503 504 =503 /maintenance.html;
-      error_page 404 =404 /404.html;      
-
       break;
 
   }
@@ -378,11 +376,6 @@
 
       # PROXY CACHING
       proxy_cache               off;
-
-      #HTTP ERRORS LOCALLY 
-      proxy_intercept_errors on; 
-      error_page 500 502 503 504 =503 /maintenance.html;
-      error_page 404 =404 /404.html;      
 
       #CORS WITH DECALICIOUS SUBDOMAINS
       if ($http_origin ~* (.*\.decalicious.com)) { 
@@ -482,10 +475,7 @@
       proxy_cache_use_stale     error timeout invalid_header updating
       http_500 http_502 http_503 http_504;
 
-      #HTTP ERRORS LOCALLY 
-      proxy_intercept_errors on; 
-      error_page 500 502 503 504 =503 /maintenance.html;
-      error_page 404 =404 /404.html;      
+
       break;
     }
 
@@ -548,10 +538,7 @@
       proxy_cache_use_stale     error timeout invalid_header updating
       http_500 http_502 http_503 http_504;
 
-      #HTTP ERRORS LOCALLY 
-      proxy_intercept_errors on; 
-      error_page 500 502 503 504 =503 /maintenance.html;
-      #error_page 404 =404 /404.html;      
+    
       break;
     }
 
@@ -607,7 +594,7 @@
       #HTTP ERRORS LOCALLY 
       proxy_intercept_errors on; 
       error_page 500 502 503 504 =503 /maintenance.html;
-      #error_page 404 =404 /404.html;      
+      error_page 404 =404 /404.html;      
       break;
     }
 
@@ -635,8 +622,8 @@
    }
 
    # ERROR PAGES (LOCAL)
-   error_page 404  404.html;
-   error_page 500 502 503 504 =503 maintenance.html;
+#   error_page 404  404.html;
+#   error_page 500 502 503 504 =503 maintenance.html;
 
 
    # NO LOGGING
