--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -622,8 +622,8 @@
    }
 
    # ERROR PAGES (LOCAL)
-#   error_page 404  404.html;
-#   error_page 500 502 503 504 =503 maintenance.html;
+   error_page 404  404.html;
+   error_page 500 502 503 504 =503 maintenance.html;
 
 
    # NO LOGGING
