--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -627,9 +627,9 @@
 
 
    # NO LOGGING
-   access_log          /dev/null;
-   error_log           /dev/null;
+   #access_log          /dev/null;
+   #error_log           /dev/null;
    # DEBUG LOGGING
-   #error_log           /var/log/nginx/decalicious.com.error.log ;
-   #access_log          /var/log/nginx/decalicious.com.log ;
+   error_log           /var/log/nginx/decalicious.com.error.log ;
+   access_log          /var/log/nginx/decalicious.com.log ;
  }
