--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -600,7 +600,7 @@
 
     # ERROR PAGE - DOWN FOR MAINTENANCE
     location  ^~ /maintenance.html {
-      internal;
+      #internal;
       root   /usr/share/nginx/sites/decalicious-down/;
       index  maintenance.html index.html index.htm;
       allow all;
@@ -608,7 +608,7 @@
 
     # EROR PAGE - LOCAL 404 PAGE
     location  ^~ /404.html {
-      internal;
+      #internal;
       root   /usr/share/nginx/sites/decalicious-down/;        
       index  404.html index.html index.htm;
       allow all;
@@ -616,7 +616,7 @@
 
     # LOCAL ERROR PAGE SCRIPTS AND IMAGES (XS Directory)
     location /xs {
-      internal;
+      #internal;
       root   /usr/share/nginx/sites/decalicious-down/;
       allow  all;    	
    }
