--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -249,7 +249,7 @@
     }    
 
     #HTTP ERRORS LOCALLY 
-    proxy_intercept_errors on; 
+    #proxy_intercept_errors on; 
     error_page 500 502 503 504 =503 /maintenance.html;
     error_page 404 =404 /404.html;    
 
@@ -591,10 +591,7 @@
       proxy_cache_use_stale     error timeout invalid_header updating
       http_500 http_502 http_503 http_504;
 
-      #HTTP ERRORS LOCALLY 
-      proxy_intercept_errors on; 
-      error_page 500 502 503 504 =503 /maintenance.html;
-      error_page 404 =404 /404.html;      
+
       break;
     }
 
